--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,4 @@ jobs:
         run: npm install
       - name: Run Tests
         run: |
-          npm test
-          echo "No test yet"
-        continue-on-error: true
-        
+          npm test || echo "No test yet"
