--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14, 16, 18] # Matrix for different Node.js versions
-        
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -88,4 +88,18 @@ jobs:
       - name: Run Tests
         run: |
           npm test || echo "No test yet"
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v4
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Deploy to AWS
+        run: aws s3 sync . s3://my-test-vpc-flowlogs-bucket --recursive
