--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,4 +102,4 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Deploy to AWS
-        run: aws s3 sync . s3://my-test-vpc-flowlogs-bucket --recursive
+        run: aws s3 sync ./ s3://my-test-vpc-flowlogs-bucket --recursive
