--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,6 +91,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    environment:
+      name: Production
+      url: https://example.com
     steps:
       - name: Code checkout
         uses: actions/checkout@v4
