--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,32 @@ jobs:
       - name: Run Tests
         run: |
           npm test || echo "No test yet"
+
+  security_scan:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Run Security Scan
+        run: |
+          echo "Running security scan for Node.js version ${{ matrix.node-version }}"
+          # Here you can add your security scanning commands, e.g., npm audit
+
+      - name: Initialise CodeQL
+        uses: github/codeql-action/init@v4
+        with:
+          languages: javascript
+
+      - name: Autobuild CodeQL
+        uses: github/codeql-action/autobuild@v4
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v4
+        with:
+          category: 'security'
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -114,4 +140,10 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Deploy to AWS
-        run: aws s3 cp ./ s3://my-test-vpc-flowlogs-bucket --recursive
+        run: echo "Deploying to AWS with Node.js version ${{ matrix.node-version }}"
+
+      - name: Delete S3 files
+        run: |
+          aws s3 sync . s3://my-test-vpc-flowlogs-bucket/ --delete
+          echo "S3 bucket deleted successfully"
+
