--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,17 +152,129 @@
 #           aws s3 sync . s3://my-test-vpc-flowlogs-bucket/ --delete
 #           echo "S3 bucket deleted successfully"
 
-# Adding staging environment
+# Adding staging environment DAY 5
 
-name: CI/CD Worklfow Staging to Rpoduction pipeline
+# name: CI/CD Worklfow Staging to Rpoduction pipeline
 
+# on:
+#   push:
+#     branches: [main]
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v4
+
+#       - name: Cache Node.js
+#         uses: actions/cache@v4
+#         with:
+#           path: ~/.npm
+#           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#           restore-keys: |
+#             ${{ runner.os }}-node-
+      
+#       - name: Setup node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: '18'
+
+#       - name: Install Dependencies
+#         run: npm install
+
+#       - name: Run Tests
+#         run: |
+#           npm test || echo "No test yet"
+
+#   deploy_staging:
+#     runs-on: ubuntu-latest
+#     needs: build
+#     environment:
+#       name: staging
+#       url: https://staging.example.com
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v4
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v4
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: ${{ secrets.AWS_REGION }}
+
+#       - name: Set up AWS CLI
+#         run: |
+#           echo "Setting up AWS CLI"
+#           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+#           unzip awscliv2.zip
+#           sudo ./aws/install --update
+#           echo "AWS CLI setup completed"
+
+#       - name: Deploy to Staging
+#         run: |
+#           echo "Deploying to Staging environment"
+#           echo "Staging deployment completed"
+
+#   deploy_production:
+#     runs-on: ubuntu-latest
+#     needs: deploy_staging
+#     environment:
+#       name: Production
+#       url: https://example.com
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v4
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v4
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: ${{ secrets.AWS_REGION }}
+#       - name: Set up AWS CLI
+#         run: |
+#           echo "Setting up AWS CLI"
+#           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+#           unzip awscliv2.zip
+#           sudo ./aws/install --update
+#           echo "AWS CLI setup completed"
+
+#       - name: Deploy to Production
+#         run: |
+#           echo "Deploying to Production environment"
+
+#   notify_slack:
+#     runs-on: ubuntu-latest
+#     needs: [deploy_staging, deploy_production]
+#     steps:
+#       - name: Notify Slack
+#         uses: slackapi/slack-github-action@v1.27.0
+#         with:
+#           payload: |
+#             {
+#               "text": ":white_check_mark: Deployment Successful!\n*Repository:* ${{ github.repository }}\n*Branch:* ${{ github.ref_name }}\n*Triggered by:* ${{ github.actor }}"
+#             }
+#         env:
+#           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+# DAY 6: Zero Downtime + Rollback to EC2
+
+name: CI/CD Workflow with Zero Downtime and Rollback
 on:
   push:
     branches: [main]
 
+permissions:
+  actions: read
+  contents: read
+  security-events: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14, 16, 18] # You can add more versions if needed
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -174,11 +286,11 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-      
-      - name: Setup node.js
+    
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: ${{ matrix.node-version }}
 
       - name: Install Dependencies
         run: npm install
@@ -187,15 +299,41 @@ jobs:
         run: |
           npm test || echo "No test yet"
 
-  deploy_staging:
+  security_scan:
     runs-on: ubuntu-latest
     needs: build
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Run Security Scan
+        run: |
+          echo "Running security scan for Node.js version ${{ matrix.node-version }}"
+          # Here you can add your security scanning commands, e.g., npm audit
+
+      - name: Initialise CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: javascript
+
+      - name: Autobuild CodeQL
+        uses: github/codeql-action/autobuild@v3
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: 'security'
+
+  deploy_staging:
+    runs-on: ubuntu-latest
+    needs: security_scan
     environment:
       name: staging
       url: https://staging.example.com
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -214,7 +352,7 @@ jobs:
       - name: Deploy to Staging
         run: |
           echo "Deploying to Staging environment"
-          echo "Staging deployment completed"
+          # Add your deployment commands here
 
   deploy_production:
     runs-on: ubuntu-latest
@@ -225,12 +363,52 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+
+      - name: setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Rolling update to ec2
+        run: |
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
+            set -e
+            cd /var/www/myapp
+            echo 'Backing up current version...'
+            cp -r . ../myapp_backup_$(date +%F_%T)
+            echo 'Fetching latest code...'
+            git fetch origin main
+            git reset --hard origin/main
+            echo 'Installing dependencies...'
+            npm ci --only=production
+            echo 'Restarting app...'
+            pm2 restart myapp || pm2 start server.js --name myapp
+          "
+      - name: Rollback if Deployment Fails
+        if: failure()
+        run: |
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
+            echo 'Rolling back to last backup...'
+            LATEST_BACKUP=$(ls -td ../myapp_backup_* | head -1)
+            if [ -d \"$LATEST_BACKUP\" ]; then
+              rm -rf /var/www/myapp
+              cp -r \"$LATEST_BACKUP\" /var/www/myapp
+              pm2 restart myapp
+              echo 'Rollback complete.'
+            else
+              echo 'No backup found. Rollback skipped.'
+            fi
+          "
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
+
       - name: Set up AWS CLI
         run: |
           echo "Setting up AWS CLI"
@@ -242,6 +420,7 @@ jobs:
       - name: Deploy to Production
         run: |
           echo "Deploying to Production environment"
+          # Add your deployment commands here
 
   notify_slack:
     runs-on: ubuntu-latest
@@ -252,7 +431,9 @@ jobs:
         with:
           payload: |
             {
-              "text": ":white_check_mark: Deployment Successful!\n*Repository:* ${{ github.repository }}\n*Branch:* ${{ github.ref_name }}\n*Triggered by:* ${{ github.actor }}"
+              "text": ":white_check_mark: Deployment Successful!\n*Repository:* ${{ github.repository }}\n*Branch:* ${{ github.ref_name }}\n*Triggered by:* ${ github.actor }"
             }
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}   
+
+          
