--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -376,6 +376,7 @@ jobs:
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
             set -e
             cd /var/www/myapp
+            git clone https://github.com/sivavek/github-workflow-gpt.git /var/www/myapp
             echo 'Backing up current version...'
             cp -r . ../myapp_backup_$(date +%F_%T)
             echo 'Fetching latest code...'
@@ -436,4 +437,3 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}   
 
-          
