--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -297,34 +297,33 @@ jobs:
         run: |
           npm test || echo "No test yet"
 
-  security_scan:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+#   security_scan:
+#     runs-on: ubuntu-latest
+#     needs: build
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v3
 
-      - name: Run Security Scan
-        run: |
-          echo "Running security scan for Node.js version ${{ matrix.node-version }}"
-          # Here you can add your security scanning commands, e.g., npm audit
+#       - name: Run Security Scan
+#         run: |
+#           echo "Running security scan for Node.js version ${{ matrix.node-version }}"
+#           # Here you can add your security scanning commands, e.g., npm audit
 
-      - name: Initialise CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: javascript
+#       - name: Initialise CodeQL
+#         uses: github/codeql-action/init@v3
+#         with:
+#           languages: javascript
 
-      - name: Autobuild CodeQL
-        uses: github/codeql-action/autobuild@v3
+#       - name: Autobuild CodeQL
+#         uses: github/codeql-action/autobuild@v3
 
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
-        with:
-          category: 'security'
+#       - name: Perform CodeQL Analysis
+#         uses: github/codeql-action/analyze@v3
+#         with:
+#           category: 'security'
 
   deploy_staging:
     runs-on: ubuntu-latest
-    needs: security_scan
     environment:
       name: staging
       url: https://staging.example.com
