--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -483,7 +483,7 @@ jobs:
             fi
 
             echo 'Installing dependencies...'
-            npm ci --only=production
+            npm install
             echo 'Restarting app...'
             if pm2 restart myapp; then
               echo 'App restarted successfully.'
@@ -492,4 +492,3 @@ jobs:
               pm2 start server.js --name myapp
             fi
           "
-          
