--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -483,6 +483,10 @@ jobs:
             fi
 
             echo 'Installing dependencies...'
+            sudo mkdir ~/.npm-global
+            sudo npm config set prefix '~/.npm-global'
+            export PATH=~/.npm-global/bin:$PATH
+            source ~/.profile
             npm install -g pm2
             echo 'Restarting app...'
             if pm2 restart myapp; then
