--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -486,7 +486,7 @@ jobs:
             sudo mkdir ~/.npm-global
             sudo npm config set prefix '~/.npm-global'
             export PATH=~/.npm-global/bin:$PATH
-            source ~/.profile
+            source ~/.bash_profile
             npm install -g pm2
             echo 'Restarting app...'
             if pm2 restart myapp; then
