--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -487,7 +487,7 @@ jobs:
               sudo mkdir ~/.npm-global
             fi
             
-            sudo chown -R 1000:1000 "/home/ec2-user/.npm"
+            sudo chown -R 1000:1000 "/home/***/.npm"
             npm config set prefix '~/.npm-global'
             export PATH=~/.npm-global/bin:$PATH
             source ~/.bash_profile
