--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -567,6 +567,10 @@ jobs:
           echo 'Installing dependencies...'
           npm ci --only=production
 
+          echo "Checking if PM2 is installed..."
+          if ! command -v pm2 &> /dev/null; then
+              npm install -g pm2
+          fi
 
           echo 'Restarting app with PM2...'
           pm2 restart myapp || pm2 start server.js --name myapp
