--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -636,7 +636,7 @@ jobs:
 
           if [ ! -d .git ]; then
             echo \"Cloning fresh code into \$INACTIVE_ENV...\"
-            git clone https://github.com/<your-org>/<your-repo>.git .
+            git clone https://github.com/sivavek/simple-jave-nodejs-app.git .
           else
             echo \"Fetching latest code in \$INACTIVE_ENV...\"
             git fetch origin main
